# MCP-Playground

./: .gitignore  README.md  pyproject.toml
advanced_mcp_exercise/backend/: database.py  main.py  notes.db
advanced_mcp_exercise/frontend/: package-lock.json
advanced_mcp_exercise/frontend/src/: main.jsx
custom_mcp_server_demo/: client-sse.py  client-stdio.py
openai_integration/: client.py  server.py
second_mcp_exercise/: main.py  notes.txt
