[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "mcp[cli]>=1.14.0",
    "openai>=1.107.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "stytch>=13.22.0",
    "fastmcp>=2.10.5",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.41",
    "stytch>=13.11.0",
]
